# Jarvis

./: .replit  pyproject.toml
jarvis/: app.py  config.py  install.bat  lancer_jarvis.bat  launcher.py  requirements.txt  tui.py
jarvis/modules/: ai.py  system.py
jarvis/static/css/: style.css
jarvis/static/js/: jarvis.js
jarvis/templates/: index.html
