[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "openai>=2.30.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "textual>=8.2.3",
]
